<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center|left"
    android:background="@color/grey"
    tools:context=".presentation.login.LoginFragment">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_text"
    android:textSize="28sp"
    android:layout_marginBottom="24dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_gmail_com"
        android:layout_marginVertical="8dp"
        android:background="@drawable/shape"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/editTextPssword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edit_text"
        android:layout_marginVertical="8dp"
        android:background="@drawable/shape"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_question_text"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:text="@string/regidter_text"
            android:textSize="16sp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password_text"
        android:textSize="16sp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img"
        android:layout_marginTop="32dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/buttonVk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@drawable/vk"
            />
        <ImageView
            android:id="@+id/buttonOk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@drawable/ok"
            />
    </LinearLayout>
</LinearLayout>