<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/for_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/home_green"
            android:layout_marginVertical="8dp" />

        <TextView
            android:id="@+id/home_txt"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_text"
            android:layout_gravity="center"
            android:textSize="18sp"
         android:layout_marginBottom="8dp"
          />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/for_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/favorite_img"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/favorite"
            android:layout_marginVertical="8dp" />

        <TextView
            android:id="@+id/favorite_txt"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_text"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/for_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/account_img"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/account"
            android:layout_marginVertical="8dp" />

        <TextView
            android:id="@+id/account_txt"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_text"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            />

    </LinearLayout>
</LinearLayout>