<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.courseinfo.CourseInfoFragment">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:minHeight="60dp"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
            <ImageView
                android:id="@+id/top_img_course_info"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_1"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/back_from_courseInfo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="7dp"
                android:src="@drawable/back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/white_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
               <ImageView
                   android:id="@+id/favorite_btn"
                   android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="7dp"
                android:src="@drawable/black_bookmark" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/rating_frame_in_course_info"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/bookmark_shape"
                app:layout_constraintBottom_toBottomOf="@id/top_img_course_info"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center|start"
                    android:src="@drawable/star" />
                <TextView
                    android:id="@+id/rateIn_course_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="8dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/bookmark_shape"
                app:layout_constraintBottom_toBottomOf="@id/top_img_course_info"
                app:layout_constraintStart_toEndOf="@id/rating_frame_in_course_info">
                <TextView
                    android:id="@+id/dateIn_course_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_gravity="center|end"
                    android:layout_margin="8dp"
                    />
            </FrameLayout>

            <TextView
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                />
           </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
   <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/img_2"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_course"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_in_web"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_grey"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_course"
        android:textSize="28sp"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/description_course_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="40dp"
        />
</LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>